--- a/config.json
+++ b/config.json
@@ -1,31 +1,20 @@
 {
   // 1. GENEL KONTROL VE ZAMANLAMA AYARLARI
-  
-  // Uygulamanın bildirim göndermesini etkinleştirir/devre dışı bırakır. (true/false)
   "enabled": true,
-  
-  // Bildirimlerin başlayacağı saat (24 saat formatında)
   "startHour": 10,
-  
-  // Bildirimlerin biteceği saat (24 saat formatında)
   "endHour": 22,
+  "timesPerDay": 8, // Rastgele bildirimler devam edecek
   
-  // Başlangıç ve bitiş saatleri arasında rastgele dağıtılacak bildirim sayısı
-  "timesPerDay": 8, 
-  
-  
-  // 2. DİNAMİK ARAYÜZ METİNLERİ (MainActivity Ekranı)
-  
-  // Uygulama ekranının üst başlık metni
+  // 2. DİNAMİK ARAYÜZ METİNLERİ
   "activityTitle": "Güncel Notlar Geçmişi",
+  "emptyMessage": "Henüz mesaj yok. Yeni notların gelmesini bekleyelim...",
   
-  // Geçmiş listesi boşken gösterilecek mesaj
-  "emptyMessage": "Henüz mesaj yok. Maaalesef... Yeni notların gelmesini bekleyelim...",
-  
-  
-  // 3. MESAJ İÇERİKLERİ (ID bazlı tekrarsızlık kontrolü)
-  // ID'si bir kez gösterilen mesaj bir daha gösterilmez. Metni değiştirebilirsiniz.
+  // 3. MESAJ İÇERİKLERİ (Tüm mesajlar duruyor, yenisi eklendi)
   "sentences": [
+    // YENİ SURPRİZ MESAJINIZ
+    { "id": "101", "text": "Sürprizzzzzz!" }, 
+    
+    // ESKİ MESAJLARINIZ DEVAM EDİYOR
     { "id": "001", "text": "İyi ki varsın! Seni düşünen biri var. 💙" },
     { "id": "002", "text": "Günün kalan kısmı için küçük bir motivasyon notu 😊" },
     { "id": "003", "text": "Unutma, her şey yolunda! Sadece devam et." },
@@ -34,22 +23,20 @@
     { "id": "006", "text": "Bugün yapman gereken en önemli 3 şeyi düşün." },
     { "id": "007", "text": "Güneşli bir gün gibi parlamaya devam et!" },
     { "id": "008", "text": "Aklına gelen ilk güzel şeyi yap." }
-    // Daha fazla benzersiz ID ve mesaj ekleyebilirsiniz...
   ],
   
-  
-  // 4. GÖRSEL URL'leri (Rastgele bazen bildirimlere eklenir)
+  // 4. GÖRSEL URL'leri
   "images": [
     "https://picsum.photos/id/10/800/400",
     "https://picsum.photos/id/200/800/400",
     "https://picsum.photos/id/350/800/400"
   ],
   
-  
-  // 5. KESİN ZAMANLAR (Override)
-  // Rastgele planlamayı ezer. Tam olarak bu saatlerde bildirim gönderilir.
+  // 5. KESİN ZAMANLAR (Override) - YENİ YAPI
+  // NOT: override artık sadece bir saat listesi değil, objelerden oluşan bir listedir.
   "overrides": [
-    "12:30",  
-    "17:00"   
+    { "time": "12:30" },  // Bu saatte rastgele bir mesaj seçilecek
+    { "time": "17:00" },   // Bu saatte rastgele bir mesaj seçilecek
+    { "time": "00:40", "messageId": "101" } // 00:40'ta SADECE 101 ID'li mesaj gösterilecek
   ]
 }
