--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   
   // 2. DİNAMİK ARAYÜZ METİNLERİ
   "activityTitle": "Güncel Notlar Geçmişi",
-  "emptyMessage": "Henüz mesaj yok. Yeni notların gelmesini bekleyelim...",
+  "emptyMessage": "Henüz mesaj yok. Napacayukkk...Yeni notların gelmesini bekleyelim...",
   
   // 3. MESAJ İÇERİKLERİ (Tüm mesajlar duruyor, yenisi eklendi)
   "sentences": [
