--- a/config.json
+++ b/config.json
@@ -38,5 +38,6 @@ y{
     { "time": "12:30" },  // Bu saatte rastgele bir mesaj seçilecek
     { "time": "17:00" },   // Bu saatte rastgele bir mesaj seçilecek
     { "time": "18:41", "messageId": "101" } // 00:40'ta SADECE 101 ID'li mesaj gösterilecek
+    { "time": "21:48", "messageId": "101" } // 00:40'ta SADECE 101 ID'li mesaj gösterilecek
   ]
 }
