--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   
   // 2. DİNAMİK ARAYÜZ METİNLERİ
   "activityTitle": "Sürpriz Notlar Geçmişi",
-  "emptyMessage": "Henüz mesaj yok. Yeni notların gelmesini bekleyelim...",
+  "emptyMessage": "Henüz mesaj yok. NAPSAKKK kiii Yeni notların gelmesini bekleyelim...",
   
   // 3. MESAJ İÇERİKLERİ (Tüm mesajlar ve yeni sürpriz mesajınız dahil)
   "sentences": [
