--- a/config.json
+++ b/config.json
@@ -39,5 +39,7 @@
     { "time": "08:00", "messageId": "003" } // Kesin mesaj (Zorunlu)
     { "time": "11:00", "messageId": "101" } // Kesin mesaj (Zorunlu)
     { "time": "08:10", "messageId": "003" } // Kesin mesaj (Zorunlu)
+    { "time": "11:06", "messageId": "008" } // Kesin mesaj (Zorunlu)
+    { "time": "11:10", "messageId": "007" } // Kesin mesaj (Zorunlu)
   ]
 }
