--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
   "timesPerDay": 8, 
   
   // 2. DİNAMİK ARAYÜZ METİNLERİ
-  "activityTitle": "Sürpriz Notlar Geçmişi",
+  "activityTitle": "Heyyy Notlar Geçmişi",
   "emptyMessage": "Henüz mesaj yok. NAPSAKKK kiii Yeni notların gelmesini bekleyelim...",
   
   // 3. MESAJ İÇERİKLERİ (Tüm mesajlar ve yeni sürpriz mesajınız dahil)
