--- a/config.json
+++ b/config.json
@@ -19,7 +19,11 @@
     { "id": "005", "text": "Bir sürpriz not: Gülümsemen en değerli şey!" },
     { "id": "006", "text": "Bugün yapman gereken en önemli 3 şeyi düşün." },
     { "id": "007", "text": "Güneşli bir gün gibi parlamaya devam et!" },
-    { "id": "008", "text": "Aklına gelen ilk güzel şeyi yap." }
+    { "id": "995", "text": "Aklına gelen ilk güzel şeyi yap." }
+    { "id": "996", "text": "Bir sürpriz not: Gülümsemen en değerli şey!" },
+    { "id": "997", "text": "Bugün yapman gereken en önemli 3 şeyi düşün." },
+    { "id": "998", "text": "Güneşli bir gün gibi parlamaya devam et!" },
+    { "id": "999", "text": "Aklına gelen ilk güzel şeyi yap." }
   ],
   
   // 4. GÖRSEL URL'leri
